Fix video clipping

--- a/style.css
+++ b/style.css
@@ -353,11 +353,8 @@ footer p {
 
 video {
     margin: 0;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     padding:0;
-
-    top:0;
-    left:0;
 
     display:flex;
     position:fixed;
@@ -365,7 +362,19 @@ video {
 
     width: 100%;
 
+
+    height:calc(100vh - var(--toolbar-height));
     aspect-ratio: 16/9;
 
-    background-size: cover;
+    /* background-size: cover; */
+    object-fit: cover;
+}
+
+.video-wrapper {
+    flex:1;
+    display: flex;
+    width:100%;
+    height:calc(100vh - var(--toolbar-height));
+    align-items: flex-start;
+    justify-content: center;
 }
